--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "run-s webpack gh-pages",
+    "build": "run-s webpack",
     "webpack": "webpack",
     "gh-pages": "rm -rf docs && cp -r dist docs",
     "test": "run-s test:*",
@@ -43,6 +43,7 @@
     "minimist": "^1.2.5",
     "npm-run-all": "^4.1.5",
     "start-server-and-test": "^1.11.6",
+    "url-loader": "^4.1.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
